Sets up client landing page

--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -1,3 +1,4 @@
-	<script src="static/menu.js"></script>
+<script src="static/clientutils.js"></script>
+<script src="static/clientgame.js"></script>
 	</body> 
 </html>
