--- a/views/pages/gameindex.ejs
+++ b/views/pages/gameindex.ejs
@@ -1,16 +1,5 @@
- <!DOCTYPE html>
- <html>
+<%- include('head') -%>
 
- <head>
-   <link rel="stylesheet" type="text/css" href="semantic/gamemain.css">
-   <link rel="stylesheet" type="text/css" href="semantic/font.css">
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-   <title>Citadelles</title>
-   <script src="socket.io/socket.io.js"></script>
-   <meta name="viewport" content="width=device-width, height=device-height">
- </head>
-
- <body>
    <div id="logwindow">
      <input type="text" id="userName" placeholder="Nom d'utilisateur ..." /><br>
      <input type="password" id="Password" placeholder="Mot de passe ..." /><br>
@@ -23,6 +12,4 @@
    <div id="gamewindow">
    </div>
 
-   <script src="static/clientgame.js"></script>
- </body>
- <html>
+<%- include('footer') -%>
