--- a/views/pages/head.ejs
+++ b/views/pages/head.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 	<head>
-		<title>Mn/rab</title>
+		<title>Citadels</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" type="text/css" href="semantic/header.css">
-		<link rel="stylesheet" type="text/css" href="semantic/content.css">
+		<link rel="stylesheet" type="text/css" href="semantic/gamemain.css">
 		<link rel="stylesheet" type="text/css" href="semantic/font.css">
-		<link rel="stylesheet" type="text/css" href="semantic/anim.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Courier+Prime&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+		<script src="socket.io/socket.io.js"></script>
 	</head>
 	<body>
