Setup lobby, start game when players are ready

--- a/views/pages/gameindex.ejs
+++ b/views/pages/gameindex.ejs
@@ -3,10 +3,11 @@
    <div id="logwindow">
      <input type="text" id="userName" placeholder="Nom d'utilisateur ..." /><br>
      <input type="password" id="Password" placeholder="Mot de passe ..." /><br>
-     <button id="Login_Register"><a>S'inscrire / Se connecter</a></button>
+     <button id="login"><a>Rejoindre le lobby</a></button>
    </div>
    <div id="lobbywindow">
      <ul id="playerlist"></ul>
+     <button id="ready"><a>Prêt ?</a></button>
      <button id="startgame"><a>Start game</a></button>
    </div>
    <div id="gamewindow">
