--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -1,82 +1,89 @@
-html {
-  overflow: hidden;
-}
+html {}
 
 body {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	background: #e9e9e9;
-}
-
-#logwindow, #lobbywindow, #gamewindow {
   position: absolute;
   top: 0;
   left: 0;
-	width: 100%;
+  width: 100%;
   height: 100vh;
+  background: #e9e9e9;
+}
+
+#logwindow, #lobbywindow {
+  position: relative;
+  width: 40%;
+  margin: 25vh 30%;
 }
 
 #logwindow {
   display: block;
 }
 
-#Login_Register, #userName, #Password {
-	box-sizing: border-box;
-	width: 40%;
-	margin: 10vh 30% -5vh;
-	padding: 3vh 10%;
-	display: inline-block;
+#login, #userName, #Password {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 3vh 10%;
+  display: inline-block;
 }
 
 #userName, #Password {
   color: #494949;
   background: #ffffff;
   border: 2px solid #a0a0a0;
+  margin-bottom: 2vh;
 }
 
-#Login_Register {
-	border-radius: 15px;
-	color: #494949;
-	background: #ffffff;
-	border: 4px solid #494949;
-	transition: all 0.4s ease 0s;
+button {
+  margin-top: 3vh;
+  border-radius: 15px;
+  color: #ffffff;
+  background: #494949;
+  border: none;
+  transition: all 0.4s ease 0s;
 }
 
-#Login_Register:hover {
-	cursor: pointer;
-	color: #ffffff;
-	background: #494949;
-	transition: all 0.4s ease 0s;
+button:hover {
+  cursor: pointer;
+  background: #a0a0a0;
+  transition: all 0.4s ease 0s;
 }
 
-#Login_Register a {
-  font-size: 1.2em;
-  font-weight: 800;
+#login a {
+  font-size: 1.3em;
+  font-weight: 500;
   letter-spacing: 0.1em;
 }
 
-#lobbywindow {
+#startgame {
   display: none;
-  background: red;
 }
 
-#startgame {
+#startgame, #ready {
   position: relative;
-  width: 5%;
+  width: 15%;
   height: 5vh;
-  margin: 42.5vh 42.5%;
+  margin: 5vh 13% 0;
 }
 
 #gamewindow {
   display: none;
   background: green;
+  height: 100vh;
 }
 
-#playerlist {
-  background: blue;
-  width: 50%;
-  height: 50vh;
+#lobbywindow {
+  display: none;
 }
+
+#lobbywindow ul {
+  list-style: none;
+  padding: 0;
+}
+
+#lobbywindow ul li {
+  border: solid 2px black;
+  margin: 3vh 0;
+  padding: 3%;
+}
+
+#playerlist {}
