--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -5,85 +5,93 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   background: #e9e9e9;
-}
-
-#logwindow, #lobbywindow {
-  position: relative;
-  width: 40%;
-  margin: 25vh 30%;
-}
-
-#logwindow {
-  display: block;
-}
-
-#login, #userName, #Password {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 3vh 10%;
-  display: inline-block;
-}
-
-#userName, #Password {
-  color: #494949;
-  background: #ffffff;
-  border: 2px solid #a0a0a0;
-  margin-bottom: 2vh;
-}
-
-button {
-  margin-top: 3vh;
-  border-radius: 15px;
-  color: #ffffff;
-  background: #494949;
-  border: none;
-  transition: all 0.4s ease 0s;
-}
-
-button:hover {
-  cursor: pointer;
-  background: #a0a0a0;
-  transition: all 0.4s ease 0s;
-}
-
-#login a {
-  font-size: 1.3em;
-  font-weight: 500;
-  letter-spacing: 0.1em;
-}
-
-#startgame {
-  display: none;
-}
-
-#startgame, #ready {
-  position: relative;
-  width: 15%;
-  height: 5vh;
-  margin: 5vh 13% 0;
 }
 
 #gamewindow {
   display: none;
-  background: green;
-  height: 100vh;
+  height: 100%;
 }
 
-#lobbywindow {
-  display: none;
+#otherswindow {
+  width: 100%;
+  height: 40%;
+	display: flex;
+	flex-wrap: nowrap;
+
 }
 
-#lobbywindow ul {
-  list-style: none;
-  padding: 0;
+.playerwindow {
+	width: 100%;
+	margin: 2vh 2%;
+	flex-wrap: wrap;
+	border-radius: 20px;
+	border: solid 2px black;
+	box-sizing: border-box;
+	box-shadow: 10px 10px 5px darkgrey;
 }
 
-#lobbywindow ul li {
-  border: solid 2px black;
-  margin: 3vh 0;
-  padding: 3%;
+#myplayerwindow .playerwindow {
+	height: 100%;
+
 }
 
-#playerlist {}
+#myplayerwindow {
+	/*min-width: 700px;
+	max-width: 1000px;*/
+  width: 60%;
+  height: 55%;
+  margin: 2vh auto;
+  display: block;
+}
+
+.city {
+	position: relative;
+	height: 40%;
+	width: 100%;
+	display: flex;
+}
+
+.score {
+  background: lightgrey;
+	flex-grow: 1;
+}
+
+.districts {
+  background: darkgrey;
+	flex-grow: 4;
+	display: flex;
+}
+
+.player {
+	position: relative;
+	height: 60%;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.money {
+  background: black;
+	flex-grow: 1.5;
+}
+
+.deck {
+  background: white;
+  flex-grow: 4;
+}
+
+.role {
+	flex-grow: 2;
+	padding: 2%;
+}
+
+.prole {
+	background: #DEB887	;
+	width: 100%;
+	height: 100%;
+	border: solid 2px black;
+	border-radius: 10px;
+	box-shadow: 2px 2px 5px black;
+}
