--- a/views/pages/gameindex.ejs
+++ b/views/pages/gameindex.ejs
@@ -1,16 +1,14 @@
 <%- include('head') -%>
-
-   <div id="logwindow">
-     <input type="text" id="userName" placeholder="Nom d'utilisateur ..." /><br>
-     <input type="password" id="Password" placeholder="Mot de passe ..." /><br>
-     <button id="login"><a>Rejoindre le lobby</a></button>
-   </div>
-   <div id="lobbywindow">
-     <ul id="playerlist"></ul>
-     <button id="ready"><a>Prêt ?</a></button>
-     <button id="startgame"><a>Start game</a></button>
-   </div>
-   <div id="gamewindow">
-   </div>
-
+<div id="gamewindow">
+  <div id="otherswindow">
+    <% users.forEach(function(){ %>
+    <%- include('pwindow'); -%>
+    <% }); %>
+  </div>
+  <div id="myplayerwindow">
+    <%- include('pwindow') -%>
+  </div>
+</div>
+<script src="static/clientutils.js"></script>
+<script src="static/clientgame.js"></script>
 <%- include('footer') -%>
