--- a/views/pages/head.ejs
+++ b/views/pages/head.ejs
@@ -4,8 +4,9 @@
 		<title>Citadels</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" type="text/css" href="semantic/gamemain.css">
 		<link rel="stylesheet" type="text/css" href="semantic/font.css">
+		<link rel="stylesheet" type="text/css" href="semantic/lobby.css">
+		<link rel="stylesheet" type="text/css" href="semantic/gamemain.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 		<script src="socket.io/socket.io.js"></script>
 	</head>
