--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -10,35 +10,34 @@ body {
 }
 
 #gamewindow {
-  display: none;
+  display: block;
   height: 100%;
 }
 
 #otherswindow {
   width: 100%;
   height: 40%;
-	display: flex;
-	flex-wrap: nowrap;
-
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .playerwindow {
-	width: 100%;
-	margin: 2vh 2%;
-	flex-wrap: wrap;
-	border-radius: 20px;
-	border: solid 2px black;
-	box-sizing: border-box;
-	box-shadow: 10px 10px 5px darkgrey;
+  background: #f9f9f9;
+  width: 100%;
+  margin: 2vh 2%;
+  flex-wrap: wrap;
+  border-radius: 20px;
+  border: solid 2px black;
+  box-sizing: border-box;
+  box-shadow: 10px 10px 5px darkgrey;
 }
 
 #myplayerwindow .playerwindow {
-	height: 100%;
-
+  height: 100%;
 }
 
 #myplayerwindow {
-	/*min-width: 700px;
+  /*min-width: 700px;
 	max-width: 1000px;*/
   width: 60%;
   height: 55%;
@@ -47,51 +46,121 @@ body {
 }
 
 .city {
-	position: relative;
-	height: 40%;
-	width: 100%;
-	display: flex;
+  position: relative;
+  height: 40%;
+  width: 100%;
+  display: flex;
 }
 
-.score {
+.money a{
+  background: lightyellow;
+  border-radius: 100%;
+}
+
+.score a{
   background: lightgrey;
-	flex-grow: 1;
+}
+
+.money, .score {
+  width: 15%;
+  position: relative;
+  text-align: center;
+}
+
+.money a, .score a{
+  padding: 0.5em;
+  border: solid 2px black;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .districts {
-  background: darkgrey;
-	flex-grow: 4;
-	display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0.5em 0.5em 0;
+}
+
+#myplayerwindow .districts {
+  width: 60%;
+}
+
+#otherswindow .districts {
+  width: 70%;
+}
+
+.district {
+  display: inline-block;
+  background: red;
+  width: 49%;
+  max-height: 30%;
+  margin-bottom: 0.5em;
 }
 
 .player {
-	position: relative;
-	height: 60%;
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
+  position: relative;
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.money {
-  background: black;
-	flex-grow: 1.5;
+#myplayerwindow .deck {
+  width: 60%;
+}
+
+#otherswindow .deck {
+  width: 70%;
 }
 
 .deck {
-  background: white;
-  flex-grow: 4;
+  padding: 1em 0.5em;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+#myplayerwindow .card {
+  background: lightgreen;
+  width: 30%;
+  min-width: 5px;
+  max-width: 200px;
+}
+
+#otherswindow .card {
+  background: lightpink;
+  width: 25%;
+  min-width: 5px;
+  max-width: 100px;
+}
+
+.card {
+  height: 100%;
+  margin: 0 0.2em;
 }
 
 .role {
-	flex-grow: 2;
-	padding: 2%;
+  flex-grow: 2;
+  padding: 2%;
 }
 
 .prole {
-	background: #DEB887	;
-	width: 100%;
-	height: 100%;
-	border: solid 2px black;
-	border-radius: 10px;
-	box-shadow: 2px 2px 5px black;
+  background: #DEB887;
+  width: 100%;
+  height: 100%;
+  border: solid 2px black;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px black;
+}
+
+#testbtns {
+  position: absolute;
+  bottom: 20px;
+  right: 70px;
+  width: 50px;
+  height: 50vh;
+}
+
+#testbtns button {
+  border: solid grey 3px;
 }
