--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -37,17 +37,23 @@ body {
 }
 
 #myplayerwindow {
-  /*min-width: 700px;
-	max-width: 1000px;*/
+  min-width: 700px;
+	max-width: 800px;
   width: 60%;
   height: 55%;
   margin: 2vh auto;
   display: block;
 }
 
-.city {
+.playername {
+  text-align: center;
+  width: 100%;
+  height: 5%;
+}
+
+.top {
   position: relative;
-  height: 40%;
+  height: 37.5%;
   width: 100%;
   display: flex;
 }
@@ -98,9 +104,9 @@ body {
   margin-bottom: 0.5em;
 }
 
-.player {
+.bottom {
   position: relative;
-  height: 60%;
+  height: 57.5%;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -145,7 +151,10 @@ body {
 }
 
 .prole {
+  min-width: 100px;
+  max-width: 200px;
   background: #DEB887;
+  float: right;
   width: 100%;
   height: 100%;
   border: solid 2px black;
