--- a/views/pages/gameindex.ejs
+++ b/views/pages/gameindex.ejs
@@ -1,4 +1,5 @@
 <%- include('head') -%>
+<span><%= user %></span>
 <div id="gamewindow">
 
   <div id="otherswindow">
@@ -8,25 +9,10 @@
   </div>
 
   <div id="myplayerwindow">
-
-    <div class="playerwindow" id="player0">
-      <div class="city">
-        <div class="score"><a>15</a></div>
-        <div class="districts"></div>
-      </div>
-
-      <div class="player">
-        <div class="money"><a>15</a></div>
-        <div class="deck" id="mydeck"></div>
-        <div class="role">
-          <div class="prole" id="myrole">
-          </div>
-        </div>
-      </div>
-
-    </div>
   </div>
+
 </div>
+
 <div id="testbtns">
   <button id="mytest1">Add card</button>
   <button id="mytest2">Remove card</button>
