--- a/views/pages/pwindow.ejs
+++ b/views/pages/pwindow.ejs
@@ -1,12 +1,13 @@
 <div class="playerwindow">
-
-  <div class="city">
+  <div class="playername">
+  </div>
+  <div class="top">
     <div class="score"><a>15</a></div>
     <div class="deck"></div>
     <div class="money"><a>15</a></div>
   </div>
 
-  <div class="player">
+  <div class="bottom">
     <div class="districts"></div>
     <div class="role">
       <div class="prole" id="myrole">
