--- a/views/pages/pwindow.ejs
+++ b/views/pages/pwindow.ejs
@@ -8,7 +8,7 @@
   </div>
 
   <div class="bottom">
-    <div class="districts"></div>
+    <div class="city"></div>
     <div class="role">
       <div class="prole" id="myrole">
       </div>
