--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -1,4 +1,4 @@
-html {}
+/*////////// GLOBAL /////////// */
 
 body {
   position: absolute;
@@ -21,21 +21,6 @@ body {
   flex-wrap: nowrap;
 }
 
-.playerwindow {
-  background: #f9f9f9;
-  width: 100%;
-  margin: 2vh 2%;
-  flex-wrap: wrap;
-  border-radius: 20px;
-  border: solid 2px black;
-  box-sizing: border-box;
-  box-shadow: 10px 10px 5px darkgrey;
-}
-
-#myplayerwindow .playerwindow {
-  height: 100%;
-}
-
 #myplayerwindow {
   min-width: 700px;
 	max-width: 800px;
@@ -45,7 +30,27 @@ body {
   display: block;
 }
 
+.playerwindow {
+  background: #f9f9f9;
+  width: 100%;
+  border-radius: 20px;
+  border: solid 2px #999;
+  box-sizing: border-box;
+  box-shadow: 5px 5px 10px #aaa;
+}
+
+#otherswindow .playerwindow {
+  margin: 2vh 2%;
+}
+
+#myplayerwindow .playerwindow {
+  height: 100%;
+}
+
+/*////////// PLAYER WINDOW DIVISION /////////// */
+
 .playername {
+  padding-top: 1em;
   text-align: center;
   width: 100%;
   height: 5%;
@@ -57,6 +62,16 @@ body {
   width: 100%;
   display: flex;
 }
+
+.bottom {
+  position: relative;
+  height: 57.5%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/*////////// MONEY & SCORE /////////// */
 
 .money a{
   background: lightyellow;
@@ -81,20 +96,24 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.districts {
+/*////////// CITY /////////// */
+
+.city {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0.5em 0.5em 0;
 }
 
-#myplayerwindow .districts {
+#myplayerwindow .city {
   width: 60%;
 }
 
-#otherswindow .districts {
+#otherswindow .city {
   width: 70%;
 }
+
+/*////////// DISTRICT /////////// */
 
 .district {
   display: inline-block;
@@ -104,12 +123,13 @@ body {
   margin-bottom: 0.5em;
 }
 
-.bottom {
-  position: relative;
-  height: 57.5%;
-  width: 100%;
+
+/*////////// DECK /////////// */
+
+.deck {
+  padding: 1em 0.5em;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 #myplayerwindow .deck {
@@ -120,10 +140,11 @@ body {
   width: 70%;
 }
 
-.deck {
-  padding: 1em 0.5em;
-  display: flex;
-  flex-wrap: nowrap;
+/*////////// CARD /////////// */
+
+.card {
+  height: 100%;
+  margin: 0 0.2em;
 }
 
 #myplayerwindow .card {
@@ -140,10 +161,7 @@ body {
   max-width: 100px;
 }
 
-.card {
-  height: 100%;
-  margin: 0 0.2em;
-}
+/*////////// ROLE /////////// */
 
 .role {
   flex-grow: 2;
@@ -151,7 +169,7 @@ body {
 }
 
 .prole {
-  min-width: 100px;
+  min-width: 50px;
   max-width: 200px;
   background: #DEB887;
   float: right;
@@ -161,6 +179,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
 }
+
+/*////////// TEST BUTTONS /////////// */
 
 #testbtns {
   position: absolute;
