--- a/public/semantic/gamemain.css
+++ b/public/semantic/gamemain.css
@@ -1,5 +1,4 @@
 /*////////// GLOBAL /////////// */
-
 body {
   position: absolute;
   top: 0;
@@ -15,7 +14,7 @@ body {
 }
 
 #otherswindow {
-  width: 100%;
+  width: 98%;
   height: 40%;
   display: flex;
   flex-wrap: nowrap;
@@ -23,7 +22,7 @@ body {
 
 #myplayerwindow {
   min-width: 700px;
-	max-width: 800px;
+  max-width: 800px;
   width: 60%;
   height: 55%;
   margin: 2vh auto;
@@ -48,37 +47,45 @@ body {
 }
 
 /*////////// PLAYER WINDOW DIVISION /////////// */
-
 .playername {
-  padding-top: 1em;
   text-align: center;
+  font-size: 1em;
+  font-weight: 800;
   width: 100%;
-  height: 5%;
+}
+
+.playername a {
+  position: absolute;
+  background: #999;
+  border-radius: 10px;
+  padding: 0.5em 1em;
+  z-index: 800;
+  letter-spacing: 0.1em;
+  transform: translate(-50%, -50%);
 }
 
 .top {
   position: relative;
-  height: 37.5%;
+  height: 40%;
   width: 100%;
   display: flex;
 }
 
 .bottom {
   position: relative;
-  height: 57.5%;
+  height: 60%;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
 
 /*////////// MONEY & SCORE /////////// */
-
-.money a{
+.money a {
   background: lightyellow;
   border-radius: 100%;
 }
 
-.score a{
+.score a {
   background: lightgrey;
 }
 
@@ -88,8 +95,10 @@ body {
   text-align: center;
 }
 
-.money a, .score a{
-  padding: 0.5em;
+.money a, .score a {
+  padding: 0.3em;
+  font-size: 1.5em;
+  font-weight: 800;
   border: solid 2px black;
   position: absolute;
   top: 50%;
@@ -97,7 +106,6 @@ body {
 }
 
 /*////////// CITY /////////// */
-
 .city {
   display: flex;
   flex-wrap: wrap;
@@ -106,7 +114,7 @@ body {
 }
 
 #myplayerwindow .city {
-  width: 60%;
+  width: 83%;
 }
 
 #otherswindow .city {
@@ -114,18 +122,16 @@ body {
 }
 
 /*////////// DISTRICT /////////// */
-
 .district {
   display: inline-block;
-  background: red;
+  border-radius: 5px;
+  background: lightpink;
   width: 49%;
   max-height: 30%;
   margin-bottom: 0.5em;
 }
 
-
 /*////////// DECK /////////// */
-
 .deck {
   padding: 1em 0.5em;
   display: flex;
@@ -141,7 +147,6 @@ body {
 }
 
 /*////////// CARD /////////// */
-
 .card {
   height: 100%;
   margin: 0 0.2em;
@@ -152,9 +157,12 @@ body {
   width: 30%;
   min-width: 5px;
   max-width: 200px;
+  border-radius: 10px;
+  transition: all 0.4s ease;
 }
 
 #otherswindow .card {
+  border-radius: 5px;
   background: lightpink;
   width: 25%;
   min-width: 5px;
@@ -162,26 +170,25 @@ body {
 }
 
 /*////////// ROLE /////////// */
-
 .role {
   flex-grow: 2;
-  padding: 2%;
 }
 
 .prole {
-  min-width: 50px;
-  max-width: 200px;
+  position: absolute;
   background: #DEB887;
   float: right;
-  width: 100%;
+  top: 5%;
+  right: -5%;
+  width: 25%;
+  min-width: 100px;
   height: 100%;
-  border: solid 2px black;
+  border: solid 2px #555;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px black;
+  box-shadow: 5px 5px 5px #999;
 }
 
 /*////////// TEST BUTTONS /////////// */
-
 #testbtns {
   position: absolute;
   bottom: 20px;
@@ -193,3 +200,19 @@ body {
 #testbtns button {
   border: solid grey 3px;
 }
+
+/*////////// TEST COLORS /////////// */
+/*
+.role {
+  background: lightpink;
+}
+.money, .score {
+  background: red;
+}
+.city {
+  background: lightyellow;
+}
+.deck {
+  background: lightblue;
+}
+*/
