--- a/views/pages/lobby.ejs
+++ b/views/pages/lobby.ejs
@@ -1,4 +1,5 @@
 <%- include('head') -%>
+<h1>Citadels.js</h1>
 <div id="logwindow">
   <input type="text" id="userName" placeholder="Nom d'utilisateur ..." /><br>
   <input type="password" id="Password" placeholder="Mot de passe ..." /><br>
