--- a/views/pages/lobby.ejs
+++ b/views/pages/lobby.ejs
@@ -8,7 +8,7 @@
 <div id="lobbywindow">
   <ul id="playerlist"></ul>
   <button id="ready"><a>Prêt ?</a></button>
-  <button id="startgame" ><a href="startgame">Start game</a></button>
+  <button id="startgame" ><a href="game">Start game</a></button>
 </div>
 <script src="static/clientutils.js"></script>
 <script src="static/lobby.js"></script>
