--- a/views/pages/pwindow.ejs
+++ b/views/pages/pwindow.ejs
@@ -10,7 +10,7 @@
   <div class="bottom">
     <div class="city"></div>
     <div class="role">
-      <div class="prole" id="myrole">
+      <div class="prole">
       </div>
     </div>
   </div>
