--- a/src/lobby/lobby.ejs
+++ b/src/lobby/lobby.ejs
@@ -5,12 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Citadels - Game</title>
+  <title>Citadels - lobby</title>
 </head>
 
 <body>
 
-  <script type="module" src="game.js"></script>
+  <input type="text" class="login-name">
+  <button class="join-room">Join room</button>
+  <button class="start-game">Start game</button>
+
+  <div class="players"></div>
 </body>
 
 </html>
