--- a/srv/views/pages/lobby.ejs
+++ b/srv/views/pages/lobby.ejs
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    Hello
+    <h1>
+        <%= gameName %> 
+    </h1>
+    <input type="text" class="login-name">
+    <button class="join-room">Join room</button>
+    <button class="start-game">Start game</button>
+  
+    <div class="players"></div>
 </body>
 </html>
