--- a/views/pages/lobbies.ejs
+++ b/views/pages/lobbies.ejs
@@ -23,4 +23,10 @@
   Lobbies for: <%= gameName %>
 </h1>
 
+<button class='create-lobby'>
+  Create lobby of <%= gameName %>
+</button>
+
+<script src="lobbies-bundle.js"></script>
+
 <%- include('../partials/footer'); %></input>
