--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,7 +4,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        content: "home-styles.css"
+        content: "lobby-styles.css"
       }
     }
   ]
