--- a/views/pages/lobby.ejs
+++ b/views/pages/lobby.ejs
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-
 <%- include('../partials/head', {
   title: gameName + " lobby",
   tags: [{
@@ -13,7 +10,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        content: "lobby-styles.css"
+        href: "lobby-styles.css"
       }
     }
   ]
