--- a/src/lobby.css
+++ b/src/lobby.css
@@ -1,3 +1,9 @@
-* {
-    /* background: red; */
+.lobby {
+  border: 1px solid black;
+  margin: 2rem;
+  padding: 1rem;
+
+  &>* {
+    display: inline-block;
+  }
 }
