--- a/views/pages/game-room.ejs
+++ b/views/pages/game-room.ejs
@@ -10,7 +10,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        href: "lobby-styles.css"
+        href: "/lobby-styles.css"
       }
     }
   ]
@@ -26,6 +26,6 @@
 
 <div class="players"></div>
 
-<script src="lobby-bundle.js"></script>
+<script src="/game-room-bundle.js"></script>
 
 <%- include('../partials/footer'); %>
