--- a/views/pages/game-lobby.ejs
+++ b/views/pages/game-lobby.ejs
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="fr">
-
 <%- include('../partials/head', {
   title: gameName + " lobbies",
   tags: [{
@@ -13,7 +10,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        href: "lobby-styles.css"
+        href: "/lobby-styles.css"
       }
     }
   ]
@@ -27,13 +24,13 @@
   Create lobby of <%= gameName %>
 </button>
 
-<% for (const lobbyId in lobbies) { %>
+<% for (const id of ids) { %>
 <div class="lobby">
-  <p><%= lobbyId %></p>
-  <button id="<%= lobbyId %>">Join lobby</button>
+  <p><%= id %></p>
+  <button id="<%= id %>">Join lobby</button>
 </div>
 <% } %>
 
-<script src="lobbies-bundle.js"></script>
+<script src="/game-lobby-bundle.js"></script>
 
 <%- include('../partials/footer'); %></input>
