--- a/views/pages/game-room.ejs
+++ b/views/pages/game-room.ejs
@@ -22,7 +22,7 @@
 
 <input type="text" class="login-name">
 <button class="join-room">Join room</button>
-<button class="start-game">Start game</button>
+<button class="toggle-readystate">Start game</button>
 
 <div class="players"></div>
 
