--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -14,10 +14,8 @@
 
 <div class="lobby">
   <p><%= gameName %></p>
-  <button>
-    <a href="/<%= gameName %>">
+  <button onclick="window.location='/<%= gameName %>'">
       Play
-    </a>
   </button>
 </div>
 
