lobby / room logic ok

--- a/views/pages/game-lobby.ejs
+++ b/views/pages/game-lobby.ejs
@@ -10,7 +10,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        href: "/lobby-styles.css"
+        href: "/global-styles.css"
       }
     }
   ]
