--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,7 +4,7 @@
       type: "link",
       attributes: {
         rel: "stylesheet",
-        href: "/lobby-styles.css"
+        href: "/global-styles.css"
       }
     }
   ]
