--- a/views/styles/global.css
+++ b/views/styles/global.css
@@ -1,3 +1,7 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 .lobby {
   border: 1px solid black;
   margin: 2rem;
