inject citadels room in game room instead of extending

--- a/views/pages/lobby.ejs
+++ b/views/pages/lobby.ejs
@@ -31,6 +31,6 @@
 </div>
 <% } %>
 
-<script src="/game-lobby-bundle.js"></script>
+<script src="/lobby-bundle.js"></script>
 
 <%- include('../partials/footer'); %></input>
