--- a/views/pages/room.ejs
+++ b/views/pages/room.ejs
@@ -11,6 +11,6 @@
 
   <div class="players"></div>
 
-  <script src="/game-room-bundle.js"></script>
+  <script src="/room-bundle.js"></script>
 
   <%- include('../partials/footer'); %>
