started to render stuff

--- a/citadels/client/citadels.ejs
+++ b/citadels/client/citadels.ejs
@@ -2,5 +2,8 @@
   title: "Citadels - Game",
   }) %>
 
+<button class="start-game">Start game</button>
+
+<%= require('./components/player.ejs')() %>
 
 <%= require('views/partials/footer.ejs')() %>
