--- a/citadels/client/citadels.ejs
+++ b/citadels/client/citadels.ejs
@@ -4,6 +4,14 @@
 
 <button class="start-game">Start game</button>
 
+
+<%= require('./components/console.ejs')() %>
+
+<%= require('./components/modal.ejs')() %>
+
 <%= require('./components/player.ejs')() %>
+
+<%= require('./components/characters.ejs')() %>
+
 
 <%= require('views/partials/footer.ejs')() %>
