--- a/citadels/client/components/player.ejs
+++ b/citadels/client/components/player.ejs
@@ -1,7 +1,7 @@
 <div class="player-container self-player-container">
 
     <div class="player-data">
-        <p class="player-name">Player</p>
+        <p class="player-login">Player</p>
         <div class="player-counts">
             <p class="player-points">0</p>
             <p class="player-money">2</p>
