--- a/citadels/client/components/player.ejs
+++ b/citadels/client/components/player.ejs
@@ -4,7 +4,7 @@
         <p class="player-login">Player</p>
         <div class="player-counts">
             <p class="player-points">0</p>
-            <p class="player-money">2</p>
+            <p class="player-coins">2</p>
         </div>
     </div>
 
