--- a/citadels/client/citadels.css
+++ b/citadels/client/citadels.css
@@ -3,6 +3,10 @@
     position: absolute;
 }
 
+.player-container.active {
+    outline: 2px dashed red;
+}
+
 .self-player-container {
     bottom: 2rem;
     left: 50%;
@@ -69,6 +73,8 @@
     line-height: 1rem;
     padding: 0.5rem;
     border-radius: 5px;
+    word-break: break-all;
+    width: 2rem;
 }
 
 .player-card {
