--- a/citadels/client/components/console.ejs
+++ b/citadels/client/components/console.ejs
@@ -1,1 +1,4 @@
-<div class="console"></div>
+<div class="console">
+    <button class="toggle-expansion">&#x25BC;</button>
+    <div class="messages"></div>
+</div>
