--- a/citadels/client/components/modal.ejs
+++ b/citadels/client/components/modal.ejs
@@ -1,4 +1,30 @@
 <div class="modal">
-    <button class="chose-coin">Get 2 coins</button>
-    <button class="chose-card">Get a card</button>
+
+    <div class="modal-coin_or_card button-container">
+        <button class="chose-coin">Get 2 coins</button>
+        <button class="chose-card">Get a card</button>
+    </div>
+
+    <div class="modal-chose_card card-container">
+    </div>
+
+    <div class="modal-magician button-container">
+        <button class="chose-exchange">Exchange cards with player</button>
+        <button class="chose-discard">Discard card with deck</button>
+    </div>
+
+    <div class="modal-magician-exchange">
+        Who do you want to exhange cards with ?
+        <div class="modal-magician-exchange-players button-container"></div>
+    </div>
+
+    <div class="modal-magician-discard">
+        How many cards to you want to discard ?
+        <div class="modal-magician-discard-cards card-container"></div>
+    </div>
+
+    <div class="modal-warlord">
+        <div class="modal-warlord-players button-container"></div>
+        <div class="modal-warlord-districts card-container"></div>
+    </div>
 </div>
