--- a/citadels/client/components/player.ejs
+++ b/citadels/client/components/player.ejs
@@ -9,7 +9,7 @@
     </div>
 
     <div class="player-cards">
-        <div class="player-districts"></div>
-        <div class="player-hand"></div>
+        <div class="player-districts card-container"></div>
+        <div class="player-hand card-container"></div>
     </div>
 </div>
