--- a/citadels/client/citadels.css
+++ b/citadels/client/citadels.css
@@ -1,10 +1,25 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;
+}
 .player-container {
     border: solid 1px #ccc;
+    border-radius: 25px;
     position: absolute;
+    background: #f9f9f9;
+    display: flex;
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 50%;
 }
 
 .player-container.active {
-    outline: 2px dashed red;
+    outline: 1px dashed red;
 }
 
 .self-player-container {
@@ -13,54 +28,47 @@
     transform: translateX(-50%);
 }
 
-.player-districts {
-    border: solid 1px red;
-    width: 300px;
-    height: 100px;
-    margin-bottom: 1rem;
+.player-cards {
+    width: 100%;
+    margin-right: 1rem;
 }
 
-.player-hand {
-    border: solid 1px brown;
-    display: flex;
-    padding: 0.5rem;
-}
+/*
+-------------- Points and coins
+*/
 
 .player-counts {
     display : flex;
     margin-right: 1rem;
 }
 
-.player-container {
-    display: flex;
-    padding: 1rem;
+.self-player-container .player-counts {
+    flex-direction: column;
+}
+
+.player-counts>* {
+    height: 1rem;
+    width: 1rem;
+    text-align: center;
+    line-height: 1rem;
+    font-weight: bold;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+.player-counts>*::after {
+    font-size: 0.7rem;
 }
 
 .player-coins {
-    height: 1rem;
-    width: 1rem;
-    text-align: center;
-    line-height: 1rem;
-    font-weight: bold;
     background: gold;
-    padding: 0.5rem;
-    border-radius: 50%;
 }
 
 .player-points {
-    height: 1rem;
-    width: 1rem;
-    text-align: center;
-    line-height: 1rem;
-    font-weight: bold;
     background: silver;
-    padding: 0.5rem;
-    border-radius: 50%;
 }
 
 .player-points:after {
     content: " pts";
-    font-size: 0.7rem;
 }
 
 .player-coins:after {
@@ -68,93 +76,191 @@
     font-size: 0.7rem;
 }
 
-.card {
-    text-align: center;
-    line-height: 1rem;
-    padding: 0.5rem;
-    border-radius: 5px;
-    word-break: break-all;
-    width: 2rem;
+/*
+-------------- Button Containers
+*/
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    width: 100%;
 }
 
-.player-card {
-    height: 2rem;
-    width: 1.3rem;
-    background: brown;
+.button-container>button {
+    margin-bottom: 0.5rem;
+    background: blue;
     color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    padding: 0.6rem 1rem;
+    width: 100%;
 }
 
-.player-hand .player-card:not(:last-child) {
+/*
+-------------- Cards Containers
+*/
+
+.card-container {
+    display: flex;
+    padding: 0.5rem;
+    height: 4rem;
+    border-radius: 10px;
+    width: 100%;
+    background: white;
+}
+
+.card-container .card:not(:last-child) {
     margin-right: 0.5rem;
 }
 
-.player-hand .player-card.highlight {
-    outline: solid 2px gold;
+.player-hand {
+    border: solid 1px brown;
 }
 
-.card.card-Green {
-    border: solid 2px green;
+.player-districts {
+    border: solid 1px lightgrey;
+    margin-bottom: 1rem;
 }
-.card.card-Purple {
-    border: solid 2px purple;
-}
-.card.card-Red {
-    border: solid 2px red;
-}
-.card.card-Blue {
-    border: solid 2px blue;
-}
-.card.card-Yellow {
-    border: solid 2px yellow;
-}
-
-
-/* CHARACTERS */
 
 .characters-container {
-    display: flex;
     justify-content: center;
-    padding: 1rem;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: solid 1px green;
 }
 
-.character-card {
-    height: 2rem;
-    background: grey;
-    margin: 0.2rem;
+/*
+-------------- Cards 
+*/
+
+/* every card */
+
+.card {
+    text-align: center;
+    font-size: 0.9rem;
+    line-height: 0.9rem;
+    border-radius: 5px;
+    box-sizing: border-box;
+    word-break: break-all;
+    width: 3rem;
+    height: 4rem;
+    padding: 0.2rem;
+    background: lightGrey;
 }
+
+/* Character cards */
 
 .character-card.chosen {
-    border: solid 1px red;
+    border: solid 1px white;
+    outline: solid 1px lightpink;
 }
 
 .character-card:not(.active){
     opacity: 0.7;
+    transform: translateY(-20%);
 }
 
+/* Other players' district cards */
+
+.hidden-district-card {
+    background: brown;
+}
+
+/* Visible district cards */
+
+.district-card.highlight {
+    transform: translateY(-20%);
+}
+
+.card-Green {
+    border: solid 2px green;
+}
+.card-Purple {
+    border: solid 2px purple;
+}
+.card-Red {
+    border: solid 2px red;
+}
+.card-Blue {
+    border: solid 2px blue;
+}
+.card-Yellow {
+    border: solid 2px yellow;
+}
+
+/*
+-------------- Modal 
+*/
+
 .modal {
+    display: none;
     position: fixed;
     z-index: 900;
-    padding: 1rem;
+    padding: 2rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 6rem;
-    height: 8rem;
+    width: 8rem;
+    height: 10rem;
     background: white;
-    border: solid 1px black;
+    border: solid 1px lightgrey;
+    border-radius: 5px;
+    box-shadow: 0 0 30px lightgrey;
 }
 
-.modal:not(.active) {
+.modal>div {
     display: none;
 }
 
-.console p {
-    margin: 0;
+/*
+-------------- Console
+*/
+
+.console {
+    position: fixed;
+    z-index: 950;
+    top: 1rem;
+    right: 1rem;
+    background: #f9f9f9;
+    border: solid 1px #ccc;
+    border-radius: 0 0 5px 5px;
+    padding: 0.5rem;
+}
+
+.console button.toggle-expansion {
+
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    height: 1.5rem;
+    width: 1.5rem;
+    background: #f9f9f9;
+    border: solid 1px #ccc;
+    border-radius: 5px;
     padding: 0;
-    font-size: 0.7rem;
+    font-size: 1rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.console .messages {
+    width: 18rem;
+    min-height: 1.5rem;
+    max-height: 20rem;
+    overflow: auto;
+    padding-right: 0.5rem;
+}
+
+.console .messages p {
+    margin: 0.2rem;
+    padding: 0;
+    font-size: 0.9rem;
+}
+
+.console .messages:not(.open) p:not(.last-message) {
+    display: none;
 }
