--- a/citadels/client/citadels.ejs
+++ b/citadels/client/citadels.ejs
@@ -9,7 +9,7 @@
 
 <%= require('./components/modal.ejs')() %>
 
-<%= require('./components/player.ejs')() %>
+<%= require('./components/players.ejs')() %>
 
 <%= require('./components/characters.ejs')() %>
 
